--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
 }
@@ -14,8 +18,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,13 +28,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
