--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,31 +1,16 @@
 body{
-  background-color: #282c34;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
-  display: flex;
-  flex-direction: column;
+  text-align: center;
+  margin-top: 1em;
+  font-size: 3.5em;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-body{
+  display: flex;
+  margin-top: 5em;
+  justify-content: center;
 }
